Possible stuck buttons fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -474,11 +474,11 @@ div.footerButtons {
   }
   #buttons.stuck .buttons button.author:nth-of-type(2) {
     width: 40vw;
-    left: 32vw;
+    left: 34vw;
   }
   #buttons.stuck .buttons button.author:nth-of-type(3) {
     width: 30vw;
-    left: 70vw;
+    left: 72vw;
   }
   #buttons {
     width: 100%;
